crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__inline_styles__inline_styles-11.snap
---
source: crates/oxvg_optimiser/src/jobs/inline_styles.rs
expression: "test_config(r#\"{ \"inlineStyles\": { \"onlyMatchedOnce\": false } }\"#,\nSome(r#\"<svg id=\"test\" xmlns=\"http://www.w3.org/2000/svg\" viewBox=\"0 0 100 100\">\n    <!-- dynamic pseudo-classes are not applied -->\n    <style>\n        .st0{fill:blue;}\n        .st0:hover{stroke:red;}\n    </style>\n    <rect width=\"100\" height=\"100\" class=\"st0\"/>\n</svg>\"#),)?"
---
<svg xmlns="http://www.w3.org/2000/svg" id="test" viewBox="0 0 100 100">
    <!-- dynamic pseudo-classes are not applied -->
    <style>.st0:hover{stroke:red}</style>
    <rect width="100" height="100" style="fill:#00f"></rect>
</svg>
