crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__inline_styles__inline_styles-13.snap
---
source: crates/oxvg_optimiser/src/jobs/inline_styles.rs
expression: "test_config(r#\"{ \"inlineStyles\": {} }\"#,\nSome(r#\"<svg id=\"test\" xmlns=\"http://www.w3.org/2000/svg\" viewBox=\"0 0 81.285 81.285\">\n    <!-- retains at-rules -->\n    <defs>\n        <style>\n\n            /* Simple Atrules */\n            @charset 'UTF-8';\n\n            @import url('https://fonts.googleapis.com/css?family=Roboto');\n\n            @namespace svg url(http://www.w3.org/2000/svg);\n\n            /* Atrules with block */\n            @font-face {\n                font-family: SomeFont;\n                src: local(\"Some Font\"), local(\"SomeFont\"), url(SomeFont.ttf);\n                font-weight: bold;\n            }\n\n            @viewport {\n                    zoom: 0.8;\n                min-zoom: 0.4;\n                max-zoom: 0.9;\n            }\n\n            @keyframes identifier {\n                  0% { top:  0; }\n                 50% { top: 30px; left: 20px; }\n                 50% { top: 10px; }\n                100% { top:  0; }\n            }\n\n\n            /* Nested rules */\n            @page :first {\n                margin: 1in;\n            }\n\n            @supports (display: flex) {\n                .module { display: flex; }\n            }\n\n            @document url('http://example.com/test.html') {\n                rect {\n                    stroke: red;\n                }\n            }\n\n\n            .blue {\n                fill: blue;\n            }\n    </style>\n    </defs>\n    <rect width=\"100\" height=\"100\" class=\"blue\"/>\n</svg>\"#),)?"
---
<svg xmlns="http://www.w3.org/2000/svg" id="test" viewBox="0 0 81.285 81.285">
    <!-- retains at-rules -->
    <defs>
        <style>
            @import "https://fonts.googleapis.com/css?family=Roboto";@namespace svg "http://www.w3.org/2000/svg";@font-face{font-family:SomeFont;src:local(Some Font),local(SomeFont),url(SomeFont.ttf);font-weight:700}@viewport{zoom:.8;min-zoom:.4;max-zoom:.9}@keyframes identifier{0%{top:0}50%{top:30px;left:20px}50%{top:10px}to{top:0}}@page:first{margin:1in}@supports (display:flex){.module{display:flex}}@document url(http://example.com/test.html){rect { stroke: red; }}
        </style>
    </defs>
    <rect width="100" height="100" style="fill:#00f"/>
</svg>
