crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__inline_styles__inline_styles-17.snap
---
source: crates/oxvg_optimiser/src/jobs/inline_styles.rs
expression: "test_config(r#\"{ \"inlineStyles\": {} }\"#,\nSome(r#\"<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"100\" height=\"100\">\n    <!-- foreignObject elements ignored -->\n    <foreignObject width=\"100%\" height=\"100%\">\n        <style>div { color: red; }</style>\n        <body xmlns=\"http://www.w3.org/1999/xhtml\"><div>hello, world</div></body>\n    </foreignObject>\n</svg>\"#),)?"
---
<svg xmlns="http://www.w3.org/2000/svg" width="100" height="100">
    <!-- foreignObject elements ignored -->
    <foreignObject width="100%" height="100%">
        <style>div{color:red}</style>
        <body xmlns="http://www.w3.org/1999/xhtml"><div>hello, world</div></body>
    </foreignObject>
</svg>
