crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__inline_styles__inline_styles-20.snap
---
source: crates/oxvg_optimiser/src/jobs/inline_styles.rs
expression: "test_config(r#\"{ \"inlineStyles\": { \"onlyMatchedOnce\": true } }\"#,\nSome(r#\"<svg>\n    <!-- elements with zany type attributes ignored -->\n    <style type=\"text/invalid\">\n        .invalid { fill: red; }\n    </style>\n    <style type=\"text/css\">\n        .css { fill: green; }\n    </style>\n    <style type=\"\">\n        .empty { fill: blue; }\n    </style>\n    <rect x=\"0\" y=\"0\" width=\"100\" height=\"100\" class=\"invalid\" />\n    <rect x=\"0\" y=\"0\" width=\"100\" height=\"100\" class=\"css\" />\n    <rect x=\"0\" y=\"0\" width=\"100\" height=\"100\" class=\"empty\" />\n</svg>\"#),)?"
---
<svg>
    <!-- elements with zany type attributes ignored -->
    <style type="text/invalid">
        .invalid { fill: red; }
    </style>
    
    
    <rect x="0" y="0" width="100" height="100" class="invalid"></rect>
    <rect x="0" y="0" width="100" height="100" style="fill:green"></rect>
    <rect x="0" y="0" width="100" height="100" style="fill:#00f"></rect>
</svg>
