crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__inline_styles__inline_styles-24.snap
---
source: crates/oxvg_optimiser/src/jobs/inline_styles.rs
expression: "test_config(r#\"{ \"inlineStyles\": {} }\"#,\nSome(r##\"<svg xmlns=\"http://www.w3.org/2000/svg\" viewBox=\"0 0 269 349\">\n    <!-- remove overridden presentation attribute -->\n    <style type=\"text/css\">\n        .a {\n        fill: #059669;\n        }\n    </style>\n    <path class=\"a\" d=\"M191.5,324.1V355l9.6-31.6A77.49,77.49,0,0,1,191.5,324.1Z\" fill=\"#059669\" transform=\"translate(-57.17 -13.4)\"/>\n</svg>\"##),)?"
---
<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 269 349">
    <!-- remove overridden presentation attribute -->
    <path d="M191.5,324.1V355l9.6-31.6A77.49,77.49,0,0,1,191.5,324.1Z" transform="translate(-57.17 -13.4)" style="fill:#059669"/>
</svg>
