crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__inline_styles__inline_styles-25.snap
---
source: crates/oxvg_optimiser/src/jobs/inline_styles.rs
expression: "test_config(r#\"{ \"inlineStyles\": {} }\"#,\nSome(r#\"<svg xmlns=\"http://www.w3.org/2000/svg\" viewBox=\"0 0 50 50\">\n  <style>\n    .a {\n      stroke: red;\n    }\n\n    [stroke] + path {\n      stroke: purple;\n    }\n  </style>\n  <path class=\"a\" d=\"M10 10h20\" stroke=\"red\"/>\n  <path d=\"M10 20h20\"/>\n  <path d=\"M10 30h20\" stroke=\"yellow\"/>\n  <path d=\"M10 40h20\"/>\n</svg>\"#),)?"
---
<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50">
    <style>
        [stroke]+path{stroke:purple}
    </style>
    <path d="M10 10h20" stroke="red" style="stroke:red"/>
    <path d="M10 20h20"/>
    <path d="M10 30h20" stroke="#ff0"/>
    <path d="M10 40h20"/>
</svg>
